# defmt-embassy-usbserial

./: Cargo.toml  LICENSE-MIT
src/: buffer.rs  controller.rs  lib.rs  task.rs
